fixed backlog css box shade overflow

--- a/css/backlog.css
+++ b/css/backlog.css
@@ -41,6 +41,8 @@ body {
     z-index: 1;
     top: 0;
     padding-top: 40px;
+    padding-left: 8px;
+    margin: 0px -8px;
 }
 
 .headlineContainer>h2 {
